# public

./: .databases.toml  .gitignore  .gitmodules  99-goodify.rules  LICENSE  LICENSE.txt  Makefile  PKGBUILD  README  README.ipynb  README.md  README.org  README.rst  brightcli  build.sh  count_crossings.py  crossings.py  dbus_executor.ipynb  dbus_interface.ipynb  dbus_notifications.ipynb  dbus_tutorial.ipynb  demo.ipynb  direct_integration_example.ipynb  engine_coolant_data.csv  environment.yml  ethylene_glycol_0.5byvol_lut.csv  example.js  finite.py  fridge.py  glycol_0.5byvol_lut.csv  goodify-notify  htxr.py  index.js  invsuminv.py  justfile  kvals.lol  libtsl.py  lockenate  lockenate-physlock-wrapper  main.py  (+19 more)
.copr/: Makefile  justfile
PSeudo/: .gitignore  API.txt  PSeudo.Build.ps1  PSeudo.Tests.ModuleFixture.psm1  README.md
PSeudo/PSeudo/: LICENSE  PSeudo.psd1  PSeudo.psm1
attic/: README.md
attic/PSeudo/: CHANGELOG.md  PSeudo.Build.ps1  PSeudo.Tests.ps1  README.md
attic/alacritty-theme-tester/: build.py
attic/db_hooks/: .databases.toml  Makefile  NOTICE  README.md  setup.py
attic/ias/: data.gnumeric
attic/korben-twitter/: Cross.toml  LICENSE
attic/mph/: Cargo.toml
attic/nodeboats_2015/: driver.js  env.sh  rudder.js
attic/prm/: LICENSE  prm.js  test.js
college/count_crossings/: README
college/heat-exchanger/: .gitignore  dataloading.py  drawsometables.py  htxr.py  main.py  tabular.py  tabular_idea_notes.txt  text_table.py
college/libtsl/: kvals.lol  tsl_week_8.m
college/nomograms/: README  book.tex  build.sh  exponentiator.py  invsuminv.py  multiplier.py  phasor_x.py  vibes2.py
college/super-four-bar-explorer/: jacobian.txt  jacobiantest.py  residualstest.py
copr-tools/: Dockerfile  LICENSE  README.md  coprctl.yml  justfile
copr-tools/example/: config.yml  resources.yml
copr-tools/scripts/: apply-homebrew.sh  release.sh
copr-tools/templates/: copr-rpmbuild.rb.njk  copr-tools.rb.njk  copr.rb.njk  (+6 more)
coprctl/: .gitignore  Dockerfile  README.md  copr.yml  coprctl.spec  justfile  test.yml
data/: engine_coolant_data.csv  engine_coolant_histograms.gnumeric  lmtd_cross_mixed_correction_factors.csv  lmtd_cross_unmixed_correction_factors.csv  schmidt_data.csv
db_hooks/: .#cli.py  .gitignore  NOTICE  __init__.py  cache.py  cli.py  client.py  config.py  demo.ipynb  editor.py  errors.py  password.py  pgpass.py  setup.py  sqlalchemy.py
dbus-iface-markdown/: LICENSE  README.md  copr.yml  dbus-iface-markdown.spec  justfile
fortune-jfhbrook/: fortune-jfhbrook.spec  justfile  package.yml
fortune-mod/: README.md  fortune-mod.spec  justfile
gaktest/: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
gaktest/.github/workflows/: qa.yaml
gaktest/docs/: index.md
gaktest/gaktest/: __init__.py  main.py
gaktest/tests/: test_example.py
heos/: LICENSE  justfile
icons/: Desktop.ini  LICENSE  Link.ani  README.md  Thumbs.db
korben/: Cargo.toml  README.md  justfile
korben-twitter/: Cargo.toml  README.md  justfile  tweet_frequency_analysis.ipynb
korbenware/: .gitignore  Makefile  NOTICE  README.md  config.py  dbus_executor.ipynb  dbus_interface.ipynb  detach.py  editor.py  env.py  executor.py  justfile  keys.py  korbenware.spec  log_explorer.ipynb  logger.py  open.py  package.yml  requirements_dev.txt  scratchpad.ipynb  session.ipynb  session.py  structuring.py  symbol.py  urls.py
lib/: sendgrid.js
mph/: Cargo.toml  README.md  README.org  build.rs  elisp.org  justfile  mph.spec  package.yml
mph/elisp/: has_terminal_frame.el
mph/src/: client.rs
nopkg/: .gitignore  Cargo.toml  README.md  nopkg.example.yaml
nopkg/src/: cache.rs  lockfile.rs  log.rs  main.rs  manifest.rs  solver.rs  url.rs
nopkg/src/cache/: download.rs  id.rs  index.rs  mod.rs
nopkg/src/cache/migrations/: V1__initial.sql
nopkg/src/commands/: add.rs  cache.rs  completion.rs  init.rs  install.rs  mod.rs  remove.rs  show.rs  update.rs
nopkg/src/init/: mod.rs
nopkg/src/manifest/: mod.rs  nopkg.toml  nopkg.yaml
old-memes/: README.md  justfile  package-lock.json  package.json  pickleback.js
omsxctl/: .gitignore  Cargo.toml  README.md  copr.yml  justfile  package.yml
omsxctl/src/: main.rs
pgp-dm/: README.md  justfile
politics/: README.md  nys-data-dump-how-to.org
procmon/: Cargo.toml
proposal/: proposal.tex  proposal_draft1.tex
pytest-gak/: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  environment.yml  justfile  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
pytest-gak/gak/: __init__.py  plugin.py
pytest-gak/gaktest/: __init__.py
pytest-gak/pytest_gak/: __init__.py
pytest-gak/tests/: test_plugin.py
pyxsession/: cli.py  config.py  detach.py  env.py  execute.py  executor.py  gshell.py  logger.py  notifications.py  open.py  procmon.py  urls.py  xdg.py
report/: report.aux  report.tex
s7sync/: Cargo.toml  README.md  autostart.desktop  s7sync.service  s7sync.spec
s7sync/src/: config.rs  data.rs  logger.rs  main.rs  monitor.rs  platform.rs  watch.sh
s7sync/src/commands/: config.rs  internal.rs  mod.rs  repositories.rs  server.rs
s7sync/src/server/: method.rs  mod.rs
s7sync/src/services/: app.rs  config.rs  mod.rs  monitor.rs
s7sync/src/web/: client.rs  method.rs  mod.rs  response.rs  server.rs
scripts/: conda2requirements.py
shape_data/: README  README~  SOURCES.csv
test/: test.js
tests/: test_gshell.py  test_procmon.py
themes/: ayu_dark.yml  hybrid.yml  hyper.yml  monokai_soda.yml  nord.yml  one_dark.yml  snazzy.yml  solarized_light.yml
tplinkctl/: .gitignore  MANIFEST.in  README.md  environment.yml  justfile  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
tplinkctl/tplinkctl/: __init__.py  status.py
twisted_ipython/: LICENSE  NOTICE  README.ipynb  __init__.py  async_runner.py  config.py  environment.yml  justfile  magic.py  package.yml  setup.py
verbtionary/: README.md  Search-Verbtionary.ps1  TODO.md  Verbtionary.psd1  Verbtionary.psm1  env.sample  justfile  requirements.psd1
week_01/: friday_aluminum_sphere.csv  rpt_skeleton_trans.odt  week_1.py
(+615 files in other folders)
