[package]
name = "mph"
description = "a cli tool for using emacs in daemon mode"
license = "MPL-2.0"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
lazy_static = "1.4.0"
nom = "7.1.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
which = "4.2.5"
