[package]
name = "nopkg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
camino = "1.1.9"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.46"
config = "0.15.9"
futures-util = "0.3.31"
indicatif = "0.17.11"
refinery = { version = "0.8.16", features = ["rusqlite", "rusqlite-bundled"] }
reqwest = { version = "0.12.14", features = ["stream"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
url = "2.5.4"
xdg = "2.5.2"
