[package]
name = "omsxctl"
description = "a command line console for openMSX"
license = "Apache-2.0"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive"] }
colored = "2.0.0"
glob = "0.3.0"
rustyline = "9.1.2"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
xml-rs = "0.8.4"
