[package]
name = "s7sync"
description = "Sie7e FileSync"
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.58"
clap = { version = "3.2.8", features = ["derive"] }
colored = "2.0.0"
directories = "4.0.1"
http = "0.2.8"
lazy_static = "1.4.0"
log = "^0.4.6"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.83"
simplelog = "^0.10.0"
tabled = "0.8.0"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
which = "4.2.5"
